Fixed media query for skill percent circles on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,11 @@ img {
 	margin-bottom: 30px;
 }
 
+.positioning {
+	margin: auto;
+	float: none;
+}
+
 .unfinished {
 	color: lightgrey;
 }
